--- a/uasdm-ui/src/app/admin/component/account/accounts.component.html
+++ b/uasdm-ui/src/app/admin/component/account/accounts.component.html
@@ -14,7 +14,7 @@
         </h3>
         <div *ngIf="!requireKeycloakLogin" class="row">
             <div class="col-md-12">
-                <button (click)="inviteUsers()" class="btn btn-primary pull-right" style="margin:10px 0;">Invite User</button>
+                <button (click)="inviteUsers()" class="btn btn-primary float-end" style="margin:10px 0;">Invite User</button>
             </div>
         </div>
 
