--- a/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync.component.html
+++ b/uasdm-ui/src/app/admin/component/labeled-property-graph-sync/labeled-property-graph-sync.component.html
@@ -15,14 +15,14 @@
 
       <form #ngForm="ngForm">
         <div class="form-group">
-          <label>URL</label>
+          <label class="form-label">URL</label>
           <input [(ngModel)]="sync.url" name="url" type="url" class="form-control" [disabled]="!newInstance"
             (change)="handleURLChange()" required />
         </div>
         <ng-container *ngIf="newInstance">
 
           <div class="form-group" *ngIf="types != null">
-            <label>Remote Labeled Property Graph Type</label>
+            <label class="form-label">Remote Labeled Property Graph Type</label>
             <select [(ngModel)]="sync.remoteType" [disabled]="mode === 'READ'" name="remoteType" type="input"
               class="form-control" (change)="handleTypeChange()" required>
               <option></option>
@@ -32,7 +32,7 @@
             </select>
           </div>
           <div class="form-group" *ngIf="entries != null">
-            <label>Remote Labeled Property Graph Entry</label>
+            <label class="form-label">Remote Labeled Property Graph Entry</label>
             <select [(ngModel)]="sync.remoteEntry" [disabled]="mode === 'READ'" name="remoteEntry" type="input"
               class="form-control" (change)="handleEntryChange()" required>
               <option></option>
@@ -42,7 +42,7 @@
             </select>
           </div>
           <div class="form-group" *ngIf="versions != null">
-            <label>Remote Labeled Property Graph Version</label>
+            <label class="form-label">Remote Labeled Property Graph Version</label>
             <select [(ngModel)]="sync.remoteVersion" [disabled]="mode === 'READ'" name="remoteVersion" type="input"
               class="form-control" (change)="handleVersionChange()" required>
               <option></option>
@@ -56,17 +56,17 @@
         <ng-container *ngIf="!newInstance">
 
           <div class="form-group">
-            <label>Remote Labeled Property Graph Type</label>
+            <label class="form-label">Remote Labeled Property Graph Type</label>
             <input [(ngModel)]="sync.displayLabel.localizedValue" name="displayLabel" type="text" class="form-control"
               [disabled]="true" required />
           </div>
           <div class="form-group">
-            <label>Remote Labeled Property Graph Entry</label>
+            <label class="form-label">Remote Labeled Property Graph Entry</label>
             <input [(ngModel)]="sync.forDate" name="forDate" type="text" class="form-control" [disabled]="true"
               required />
           </div>
           <div class="form-group">
-            <label>Remote Labeled Property Graph Version</label>
+            <label class="form-label">Remote Labeled Property Graph Version</label>
             <input [(ngModel)]="sync.versionNumber" name="versionNumber" type="number" class="form-control"
               [disabled]="true" required />
           </div>
