--- a/uasdm-ui/src/app/admin/component/organization-sync/organization-sync.component.html
+++ b/uasdm-ui/src/app/admin/component/organization-sync/organization-sync.component.html
@@ -15,7 +15,7 @@
 
       <form #ngForm="ngForm">
         <div class="form-group">
-          <label>URL</label>
+          <label class="form-label">URL</label>
           <input [(ngModel)]="sync.url" name="url" type="url" class="form-control" [disabled]="!newInstance" required />
         </div>
         <div *ngIf="isAdmin && mode === 'WRITE'" class="btn-holder" style="text-align: right;">
