--- a/uasdm-ui/src/app/core/component/forgotpassword/forgotpassword.component.html
+++ b/uasdm-ui/src/app/core/component/forgotpassword/forgotpassword.component.html
@@ -17,7 +17,7 @@
       <div *ngIf="message != null" class="alert alert-danger" role="alert">{{message}}</div>
       
       <div class="form-group" *ngIf="!emailIsSent">
-        <label>
+        <label class="form-label">
           <localize key="forgotpassword.username"></localize>
         </label>
         <input type="text" [(ngModel)]="username" name="username" required>
