--- a/uasdm-ui/src/app/site/component/modal/run-process-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-process-modal.component.html
@@ -237,7 +237,7 @@
 			<label for="productName">Product name</label>
 			<input #productName="ngModel" [(ngModel)]="config.productName" name="productName" type="input" class="form-control"
 				placeholder="Product name" required forbiddenName />
-			<div class="text-danger" *ngIf="productName.invalid && (productName.dirty || productName.touched)"><div *ngIf="productName.errors?.required">Product name is required.</div><div *ngIf="productName.errors?.forbiddenName">No spaces or special characters such as <, >, -, +, =, !, @, #, $, %, ^, &, *, ?,/, \ or apostrophes are allowed.</div></div>
+			<div class="text-danger" *ngIf="productName.invalid && (productName.dirty || productName.touched)"><div *ngIf="productName.errors?.required">Product name is required.</div><div *ngIf="productName.errors?.forbiddenName">No spaces or special characters such as &lt;, &gt;, -, +, =, !, &#64;, #, $, %, ^, &amp;, *, ?,/, \ or apostrophes are allowed.</div></div>
 		</div>
 
 		<ng-container *ngIf="config.type === ProcessConfigType.ODM" [ngTemplateOutlet]="odmConfig">
