--- a/uasdm-ui/src/app/site/component/processing-report/processing-report.component.html
+++ b/uasdm-ui/src/app/site/component/processing-report/processing-report.component.html
@@ -10,7 +10,7 @@
 <!-- =COUNTIF(E1:E517, "Complete") / 516 -->
 
 <div class="col-sm-12">
-  <label>Since Date</label>
+  <label class="form-label">Since Date</label>
   <input type="date" [(ngModel)]="date" name="sinceDate" class="form-control">
 </div>
 
