--- a/uasdm-ui/src/app/admin/component/account/account-invite-complete.component.html
+++ b/uasdm-ui/src/app/admin/component/account/account-invite-complete.component.html
@@ -14,26 +14,26 @@
         </div>
         <hr>
         <div class="form-group">
-          <label>
+          <label class="form-label">
             <localize key="account.firstname"></localize>
           </label>
           <input type="text" [(ngModel)]="user.firstName" name="firstname" required>
         </div>
         <div class="form-group">
-          <label>
+          <label class="form-label">
             <localize key="account.lastname"></localize>
           </label>
           <input type="text" [(ngModel)]="user.lastName" name="lastname" required>
         </div>
         <div class="form-group">
-          <label>
+          <label class="form-label">
             <localize key="account.phonenumber"></localize>
           </label>
           <input type="text" [(ngModel)]="user.phoneNumber" name="phoneNumber" phoneNumber #phoneNumber="ngModel">
           <div *ngIf="phoneNumber.errors?.phoneNumber" class="inline-error-message">Invalid phone number</div>
         </div>
         <div class="form-group">
-          <label>
+          <label class="form-label">
             <localize key="account.email"></localize>
           </label>
           <input type="email" [(ngModel)]="user.email" name="email" #aemail="ngModel" required email>
@@ -48,23 +48,23 @@
         </div>
         <hr>
         <div class="form-group">
-          <label>
+          <label class="form-label">
             <localize key="account.username"></localize>
           </label>
           <input type="text" [disabled]="!user.newInstance && user.username === 'admin'" [(ngModel)]="user.username" name="username" required>
         </div>
         <div class="form-group">
-          <label>
+          <label class="form-label">
             <localize key="account.password"></localize>
           </label>
           <input type="password" [(ngModel)]="user.password" name="password" #password="ngModel" required minlength="5" maxlength="50" passwordValidator>
           <password-strength-bar [passwordToCheck]="user.password"></password-strength-bar>
           <div *ngIf="password.errors?.passwordStrength" class="inline-error-message">
-            The password must be at least 14 characters in length and must contain at least: Two uppercase letters [A-Z], two lowercase letters [a-z], two digits [0-9], and two special characters [e.g.: !@#$*&]
+            The password must be at least 14 characters in length and must contain at least: Two uppercase letters [A-Z], two lowercase letters [a-z], two digits [0-9], and two special characters [e.g.: !&#64;#$*&amp;]
           </div>          
         </div>
         <div class="form-group">
-          <label>
+          <label class="form-label">
             <localize key="account.certainPassword"></localize>
           </label>
           <input type="password" name="certainPassword" [ngModel]="certainPassword" #certainPassword="ngModel" required />
