--- a/uasdm-ui/src/app/admin/component/email/email.component.html
+++ b/uasdm-ui/src/app/admin/component/email/email.component.html
@@ -14,7 +14,7 @@
 
     <form #form="ngForm" (ngSubmit)="form.valid && onSubmit()">
       <div class="form-group">
-        <label>
+        <label class="form-label">
           <localize key="email.server"></localize>
         </label>
         <input type="text" [(ngModel)]="email.server" name="server" required #server="ngModel">
@@ -23,19 +23,19 @@
         </div>
       </div>
       <div class="form-group">
-        <label>
+        <label class="form-label">
           <localize key="email.username"></localize>
         </label>
         <input type="text" [(ngModel)]="email.username" name="username" required>
       </div>
       <div class="form-group">
-        <label>
+        <label class="form-label">
           <localize key="email.password"></localize>
         </label>
         <input type="password" [(ngModel)]="email.password" name="password" required>
       </div>
       <div class="form-group">
-        <label>
+        <label class="form-label">
           <localize key="email.port"></localize>
         </label>
         <input type="number" [(ngModel)]="email.port" name="port" required #port="ngModel" number>
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label>
+        <label class="form-label">
           <localize key="email.from"></localize>
         </label>
         <input type="email" [(ngModel)]="email.from" name="from" required #from="ngModel" email>
