--- a/uasdm-ui/src/app/site/component/map-attribute/map-attribute.component.html
+++ b/uasdm-ui/src/app/site/component/map-attribute/map-attribute.component.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 <div class="row-holder">
-    <div class="label-holder"><label>Longitude</label></div>
+    <div class="label-holder"><label class="form-label">Longitude</label></div>
     <div class="holder">
     <div class="modal-body text-left">
       <input name="longitude" type="number" class="form-control" [(ngModel)]="coordinate.longitude" (change)="refreshCoordinateFromInput()" required />
@@ -26,7 +26,7 @@
   </div>
 </div>
 <div class="row-holder">
-    <div class="label-holder"><label>Latitude</label></div>
+    <div class="label-holder"><label class="form-label">Latitude</label></div>
     <div class="holder">
     <div class="modal-body text-left">
       <input name="latitude" type="number" class="form-control" [(ngModel)]="coordinate.latitude" (change)="refreshCoordinateFromInput()" required />
