--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -10,7 +10,7 @@
       <label for="productName">Product name</label>
       <input #productName="ngModel" [(ngModel)]="config.productName" name="productName" type="input" class="form-control"
         placeholder="Product name" required forbiddenName />
-      <div class="text-danger" *ngIf="productName.invalid && (productName.dirty || productName.touched)"><div *ngIf="productName.errors?.required">Product name is required.</div><div *ngIf="productName.errors?.forbiddenName">No spaces or special characters such as <, >, -, +, =, !, @, #, $, %, ^, &, *, ?,/, \ or apostrophes are allowed.</div></div>
+      <div class="text-danger" *ngIf="productName.invalid && (productName.dirty || productName.touched)"><div *ngIf="productName.errors?.required">Product name is required.</div><div *ngIf="productName.errors?.forbiddenName">No spaces or special characters such as &lt;, &gt;, -, +, =, !, &#64;, #, $, %, ^, &amp;, *, ?,/, \ or apostrophes are allowed.</div></div>
     </div>
   </ng-container>
 
@@ -116,9 +116,9 @@
       style="margin-top:20px;">Advanced Settings
     </button>
     <div style="padding-top:10px;" [collapse]="isAdvancedSettingsCollapsed" [isAnimated]="true">
-      <div class="panel panel-default" style="padding:10px;">
+      <div class="card bg-default" style="padding:10px;">
 
-        <div class="panel-body" style="padding:10px;">
+        <div class="card-body" style="padding:10px;">
           <div style="padding:10px;">
             <div class="form-group">
               <label for="outFileNamePrefix">Output Product Name Prefix</label>
@@ -384,9 +384,9 @@
 
         <!-- Existing task panel -->
         <div *ngIf="existingTask && !currentTask">
-          <div class="panel panel-warning" style="margin: 30px 0 30px 0;">
-            <div class="panel-heading" style="font-size: 20px;">Partial Upload Detected</div>
-            <div class="panel-body">
+          <div class="card bg-warning" style="margin: 30px 0 30px 0;">
+            <div class="card-header" style="font-size: 20px;">Partial Upload Detected</div>
+            <div class="card-body">
               <h4>A partial upload was detected. You can either cancel that partial upload or attempt to
                 continue.</h4>
               <h4>
@@ -407,12 +407,12 @@
 
         <!-- Task finished upload notification -->
         <div *ngFor="let note of taskFinishedNotifications" class="panel panel-success" style="margin: 30px 0 30px 0;">
-          <div class="panel-heading" style="font-size: 20px;">
+          <div class="card-header" style="font-size: 20px;">
             Upload Details
-            <i class="fa fa-times btn btn-close pull-right" style="min-width:20px;padding:0;line-height: 27px;"
+            <i class="btn btn-close float-end" style="min-width:20px;padding:0;line-height: 27px;"
               (click)="closeTaskFinishedNotification(note.id)"></i>
           </div>
-          <div class="panel-body">
+          <div class="card-body">
             <h4>
               Status:
               <b> Upload successfully completed </b>
@@ -433,7 +433,7 @@
             <ul>
               <li *ngIf="uploadTarget === 'raw'">Must be compressed into a .zip or .tar.gz format.</li>
               <li *ngIf="uploadTarget !== 'raw'">Can optionally be compressed into a .zip or .tar.gz format.</li>
-              <li>Containing spaces or special characters such as <,>, -, +, =, !, @, #, $, %, ^, &, *, ?,/,\ or
+              <li>Containing spaces or special characters such as &lt;, &gt;, -, +, =, !, &#64;, #, $, %, ^, &amp;, *, ?,/, \ or apostrophes are allowed or
                   apostrophes will be replaced with underscores</li>
             </ul>
 
@@ -497,9 +497,9 @@
 
           </div>
 
-          <div *ngIf="currentTask" class="panel panel-warning" style="margin: 30px 0 30px 0;">
-            <div class="panel-heading" style="font-size: 20px;">Upload Details</div>
-            <div class="panel-body">
+          <div *ngIf="currentTask" class="card bg-warning" style="margin: 30px 0 30px 0;">
+            <div class="card-header" style="font-size: 20px;">Upload Details</div>
+            <div class="card-body">
               <h4>
                 Status:
                 <b> {{currentTask.status}} </b>
