--- a/uasdm-ui/src/app/site/component/report/reports.component.html
+++ b/uasdm-ui/src/app/site/component/report/reports.component.html
@@ -13,7 +13,7 @@
 			<h2>Report</h2>
 	
 			<div class="row">
-	            <input class="btn btn-primary pull-right" style="margin-bottom:10px;margin-right:10px;" type="submit" value="Export CSV" (click)="onExportCSV()">
+	            <input class="btn btn-primary float-end" style="margin-bottom:10px;margin-right:10px;" type="submit" value="Export CSV" (click)="onExportCSV()">
 	        </div>
 	
 	        <div class="row">
